--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "@types/node": "^14.10.3",
     "@types/react": "^16.9.49",
     "@types/react-dom": "^16.9.8",
+    "@types/react-redux": "^7.1.9",
+    "@types/react-router-dom": "^5.1.5",
     "mutationobserver-shim": "^0.3.7",
     "node-sass": "^4.14.1",
     "react": "^16.13.1",
